--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "es6-shim": "^0.35.1",
     "event-source-polyfill": "^0.0.7",
     "expose-loader": "^0.7.1",
-    "extract-text-webpack-plugin": "^2.0.0-rc",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.4",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
     "preboot": "^4.5.2",
     "raw-loader": "^0.5.1",
     "rxjs": "^5.0.1",
